# Pathoscope-AI

./: IMPLEMENTATION_ROADMAP.md  LICENSE  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  PHASE_5_REPORT.md  PHASE_6_REPORT.md  PROJECT_COMPLIANCE_AUDIT.md  PathoScope_AI_Master_Viva_Technical_Report.docx  PathoScope_AI_Master_Viva_Technical_Report_extracted.txt  PathoScope_AI_Project_Blueprint_v1.0_extracted.txt  PathoScope_AI_Technical_Project_Report.docx  PathoScope_AI_Technical_Project_Report_extracted.txt  README.md  environment.yml  orignal project proposal and Complete Scientific Development Guide.docx  pyproject.toml  requirements.txt  run_validation_suite.py  sample.fasta  scientific_guide_extracted.txt  setup_test_data.py  validation_report.md
RESULT/: pathoscope_genomics_report (3).html
config/: default_config.yaml
data/: gene_registry.db
pathoscope/: __init__.py  app.py  cli.py  pipeline.py
project documents/: AppFlow_updated.md  PRD_updated.md  PathoScope_AI_Part1_PRD_TRD.md  PathoScope_AI_Part2_AppFlow_UIUX.md  PathoScope_AI_Part3_Schema_Implementation.md  PathoScope_AI_Part4_MasterGuide_Prompts.md  PathoScope_AI_Project_Blueprint_v1.0.docx  TRD_updated.md  UIUX_updated.md
test_data/: fetch_influenza.py  setup_batch_data.py
test_suite/: __init__.py  run_test_suite.py  test_annotation.py  test_fasta_valid.py  test_fastq_valid.py  test_invalid_sequences.py  test_orf_prediction.py  test_report_generation.py  test_statistics.py
tests/: __init__.py  test_ai_interpreter.py  test_annotator.py  test_app.py  test_expression.py  (+7 more)
(+704 files in other folders)
