[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathoscope-ai"
version = "1.0.0"
description = "PathoScope AI: An Automated Viral Functional Genomics and Gene Expression Analysis Pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "National Centre for Bioinformatics (NCB)", email = "info@qau.edu.pk" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "biopython>=1.83",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "networkx>=3.2.1",
    "jinja2>=3.1.3",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "loguru>=0.7.2",
    "pydantic>=2.6.4",
    "openai>=1.14.0",
    "streamlit>=1.30.0",
    "statsmodels>=0.14.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pathoscope*"]
